Fixed nav menu issue on smaller screens

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -62,7 +62,7 @@
     justify-content: center;
     align-items: center;
     transition: transform 0.2s ease-out;
-    transform: translateX(200%);
+    transform: translateX(500%);
 
     a {
       font-size: 1.5rem;
